[package]
name = "zhiyan-server"
version = "0.0.1"
authors = ["智眼"]
edition = "2018"

[dependencies]
tonic ="0.5"
prost="0.8"
tokio = { version = "1.18.2", features = ["full"] }
clap = "3.1.18"
local_ipaddress = "0.1.3"
log4rs = "1.0.0"
log = "0.4.17"
regex = "1.5.4"
serde_json = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
rust-ini = "0.17.0"
signal-hook = "0.3.12"
libzygrpc= "1.0.0"
json = "*"

#PostgreSQL
postgres = "0.19.3"
tokio-postgres = "0.7.6"

#Redis
redis = "0.21.5"
simple_redis = "0.6.1"

[build-dependencies]
tonic-build ="0.5"