[package]
edition = "2018"
name = "libzygrpc"
version = "1.0.1"
authors = ["智眼"]
description = "智眼Grpc"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zygrpc"
path = "./src/lib.rs"

[dependencies]
tonic ="0.5"
prost="0.8"
tokio ={version ="1.0",features =["macros","rt-multi-thread"]}

[build-dependencies]
tonic-build ="0.5"

[dev-dependencies]
pretty_assertions = "0.4.0"
